--- a/best-beauty-app/package.json
+++ b/best-beauty-app/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "dompurify": "^3.0.11",
+    "firebase": "^10.11.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
